# Safro

./: .env.example  .gitignore  AFRICASTALKING_SETUP.md  CANISTER_IDS.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  architechture.md  dfx.json  docker-compose.yml  overview.md  package-lock.json  package.json  render.yaml
BitSense-HTML-v1.0.0/: index-rtl.html  index.html  package-lock.json  package.json  webpack.config.js
BitSense-HTML-v1.0.0/demo_1/: about-1-rtl.html  about-1.html  about-2-rtl.html  about-2.html  about-3-rtl.html  about-3.html  case-studies-detail-rtl.html  case-studies-detail.html  case-studies-rtl.html  case-studies.html  contact-rtl.html  contact.html  event-1-rtl.html  event-1.html  event-2-rtl.html  event-2.html  news-1-rtl.html  news-1.html  news-2-rtl.html  news-2.html  services-1-rtl.html  services-1.html  services-2-rtl.html  services-2.html  services-detail-rtl.html  services-detail.html
BitSense-HTML-v1.0.0/demo_2/: about-1-rtl.html  about-1.html  about-2-rtl.html  about-2.html  about-3-rtl.html  about-3.html  case-studies-detail-rtl.html  case-studies-detail.html  (+20 more)
config/: prometheus.yml
frontend/: .env.local.example  next.config.ts  package.json  tailwind.config.ts
scripts/: deploy-local.sh
services/: Cargo.toml
services/api-gateway/: Cargo.toml  README.md
services/api-gateway/src/: canister.rs  main.rs  models.rs
services/api-gateway/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
services/api-gateway/src/features/: mod.rs
services/api-gateway/src/features/auth/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
services/api-gateway/src/features/escrow/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
services/api-gateway/src/features/kyc/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
services/api-gateway/src/features/notification/: controller.rs  dto.rs  mod.rs  service.rs
services/api-gateway/src/features/reputation/: controller.rs  dto.rs  mod.rs  model.rs  repository.rs  service.rs
services/api-gateway/src/features/ussd/: controller.rs  dto.rs  model.rs  repository.rs  service.rs
services/api-gateway/src/features/wallet/: controller.rs  dto.rs  service.rs
services/api-gateway/src/shared/: config.rs  errors.rs  middleware.rs  mod.rs  utils.rs
(+218 files in other folders)
