[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ic-agent = "0.37"
candid = "0.10"
dotenv = "0.15"
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
sha2 = "0.10"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

